[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask==2.3.3",
    "flask-sqlalchemy>=3.1.1",
    "gtts==2.3.2",
    "gunicorn>=23.0.0",
    "moviepy==1.0.3",
    "openai>=1.61.1",
    "psycopg2-binary>=2.9.10",
    "requests==2.31.0",
    "werkzeug>=3.1.3",
]
